--- a/index.ipynb
+++ b/index.ipynb
@@ -401,12 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    pass"
+    "    return len(restaurant['price']) > len(alternati)"
    ]
   },
   {
